--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ python-multipart = "*"
 google-cloud-storage = "*"
 sqlalchemy = "*"
 psycopg2-binary = "*"
+google-cloud-firestore = "*"
+google-cloud-pubsub = "*"
 
 [dev-packages]
 
