--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -25,6 +25,7 @@ env:
   DEPLOYMENT_NAME: gke-test # TODO: update to deployment name
   REPOSITORY: samples # TODO: update to Artifact Registry docker repository
   IMAGE: static-site
+  SA_KEY_JSON : ${{secrets.GCP_SA_KEY_JSON}}
 
 jobs:
   setup-build-publish-deploy:
