--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -59,6 +59,13 @@ jobs:
 #     - name: Docker configuration
 #       run: |-
 #         echo ${{steps.auth.outputs.access_token}} | docker login -u oauth2accesstoken --password-stdin https://$GAR_LOCATION-docker.pkg.dev
+
+    # coker run 
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
         
     # Get the GKE credentials so we can deploy to the cluster
     - name: Set up GKE credentials
