--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -18,12 +18,14 @@ on:
       - master
 
 env:
+# gcloud artifacts repositories create samples --location=us-central1 
+# gcloud artifacts repositories create samples --repository-format=docker --location=us-central1 --description="Docker repository"
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
-  GAR_LOCATION: us-central1 # TODO: update region of the Artifact Registry
-  GKE_CLUSTER: cluster-1    # TODO: update to cluster name
-  GKE_ZONE: us-central1-c   # TODO: update to cluster zone
-  DEPLOYMENT_NAME: gke-test # TODO: update to deployment name
-  REPOSITORY: samples # TODO: update to Artifact Registry docker repository
+  GAR_LOCATION: us-central1 
+  GKE_CLUSTER: cluster-1    
+  GKE_ZONE: us-central1-c   
+  DEPLOYMENT_NAME: gke-test 
+  REPOSITORY: samples 
   IMAGE: static-site
   SA_KEY_JSON : ${{secrets.GCP_SA_KEY_JSON}}
 
