--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -77,6 +77,7 @@ jobs:
         location: ${{ env.GKE_ZONE }}
 
     # Build the Docker image
+#   #us-central1-docker.pkg.dev/genuine-space-349906/samples
     - name: Build
       run: |-
         docker build \
@@ -87,6 +88,7 @@ jobs:
     # Push the Docker image to Google Artifact Registry
     - name: Publish
       run: |-
+        docker push gcr.io/
         docker push "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA"
     # Set up kustomize
     - name: Set up Kustomize
