--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -77,19 +77,19 @@ jobs:
         location: ${{ env.GKE_ZONE }}
 
     # Build the Docker image
-#   #us-central1-docker.pkg.dev/genuine-space-349906/samples
     - name: Build
       run: |-
         docker build \
-          --tag "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA" \
+          --tag "$IMAGE:latest" \
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" \
           .
     # Push the Docker image to Google Artifact Registry
     - name: Publish
       run: |-
-        docker push gcr.io/
-        docker push "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA"
+        docker tag $IMAGE:latest gcr.io/$PROJECT_ID/$IMAGE:latest
+        docker push gcr.io/$PROJECT_ID/$IMAGE:latest
+       
     # Set up kustomize
     - name: Set up Kustomize
       run: |-
@@ -99,7 +99,7 @@ jobs:
     - name: Deploy
       run: |-
         # replacing the image name in the k8s template
-        ./kustomize edit set image LOCATION-docker.pkg.dev/PROJECT_ID/REPOSITORY/IMAGE:TAG=$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA
+        ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:latest=gcr.io/$PROJECT_ID/$IMAGE:latest
         ./kustomize build . | kubectl apply -f -
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
