--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -85,16 +85,21 @@ jobs:
         docker tag $IMAGE:latest gcr.io/$PROJECT_ID/$IMAGE:latest
         docker push gcr.io/$PROJECT_ID/$IMAGE:latest
        
-    # Set up kustomize
-    - name: Set up Kustomize
-      run: |-
-        curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-        chmod u+x ./kustomize
-    # Deploy the Docker image to the GKE cluster
-    - name: Deploy
-      run: |-
-        # replacing the image name in the k8s template
-        ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:latest=gcr.io/$PROJECT_ID/$IMAGE:latest
-        ./kustomize build . | kubectl apply -f -
-        kubectl rollout status deployment/$DEPLOYMENT_NAME
-        kubectl get services -o wide
+    # # Set up kustomize
+    # - name: Set up Kustomize
+    #   run: |-
+    #     curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
+    #     chmod u+x ./kustomize
+    # # Deploy the Docker image to the GKE cluster
+    # - name: Deploy
+    #   run: |-
+    #     # replacing the image name in the k8s template
+    #     ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:latest=gcr.io/$PROJECT_ID/$IMAGE:latest
+    #     ./kustomize build . | kubectl apply -f -
+    #     kubectl rollout status deployment/$DEPLOYMENT_NAME
+    #     kubectl get services -o wide
+
+    # run the kubectl for gke
+    - name : RUN in the GKE with kubectl
+      run : |- 
+        kubectl run photo_album --image=gcr.io/$PROJECT_ID/$IMAGE:latest
